# NAC-PayTracker

./: .dockerignore  .gitignore  README.md  pyproject.toml
deploy/: .env.prod.example  Caddyfile.pch-ledger  Dockerfile  README.md  docker-compose.prod.yml
deploy/ops/: mem-daily-report.py  mem-monitor.sh
docs/: Acceptance test — May 2026.txt  Acceptance_test_May_2026.md  SYSTEM_CONTEXT.md  iCal_schedule_feed.ics
src/nac_pay/: __init__.py  onboarding.py  timeutil.py
tests/: conftest.py  test_timeutil.py
tests/app/: test_app_logging.py  test_calendar.py  test_compare.py  test_dashboard.py  test_day_detail.py  test_day_edit.py  test_discrepancies.py  test_documents.py  test_drops.py  test_feed_cancellation.py  test_feed_updater.py  test_month_scoping.py  test_onboarding.py  test_pay_breakdown.py  test_pay_stub_upload.py  test_phase_h.py  test_phase_i.py  test_pwa.py  test_reassign.py  test_reserve_window.py  test_settings.py  test_static_version.py
tests/auth/: conftest.py  test_primitives.py  test_resend.py  test_routes.py
tests/billing/: test_portal.py  test_routes.py  test_state.py  test_stripe.py
tests/engine/: test_acceptance_may_2026.py  test_reassignment.py  test_recompute.py  test_worked_examples.py
tests/integration/: test_may_2026_baseline.py
tests/parsers/: test_ical_feed.py  test_ical_merge.py  test_master_schedule.py  test_pay_stub.py  test_reconciliation.py  test_trip_pairing_packet.py
tests/schedule/: test_acceptance_may_2026.py  test_apply_actuals.py  test_apply_overrides.py  test_lowering.py
tests/storage/: test_assignment_versions.py  (+6 more)
(+81 files in other folders)
