[project]
name = "nac-pay"
version = "0.1.0"
description = "NAC pilot monthly pay tracker — JCBA-2019 Section 3 engine + web app"
requires-python = ">=3.11"
authors = [{ name = "MrDenfish" }]
dependencies = [
    "pdfplumber>=0.11",
    "icalendar>=5.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
# Engine layer has zero runtime deps. The optional groups below are for later layers.
app = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",     # for Postgres in production
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",       # for fastapi.testclient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nac_pay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
